Change features -> benefits

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home">Coming Soon</a></li>
-            <li><a href="#features-section">Features</a></li>
+            <li><a href="#benefits">Benefits</a></li>
             <li><a href="#contact-section">Sign Up</a></li>
           </ul>
         </div>
@@ -59,7 +59,7 @@
       </div>
     </div>
     <!-- Features -->
-    <div id="features-section" class="features-container">
+    <div id="benefits" class="features-container">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 features">
@@ -70,26 +70,26 @@
             <div class="icon">
               <i class="icon ion-ios-lightbulb-outline"></i>
             </div>
-            <h4>Weekly Surveys</h4>
+            <h4>Increased Awareness</h4>
             <p>
-              Deliver surveys to your team, weekly or bi-weekly, with questions directed at their goals, accomplishments, and challenges.
-              Your survey can be delivered to where your team works, whether on the web or via slack.
+              Managers will be more aware what challenges and victories their reports are facing. Team members
+              can have more visibility into how others on the team are feeling.
             </p>
           </div>
           <div class="col-sm-4 features-box2">
             <div class="icon">
               <i class="icon ion-thumbsup"></i>
             </div>
-            <h4>Share Praise</h4>
+            <h4>Higher Satisfaction</h4>
             <p>
-              Your team wants to be recognized. Let them recognize each other through shout outs.
+              Recognizing good things as they happen increases satisfaction and fulfillment on a team.
             </p>
           </div>
           <div class="col-sm-4 features-box3">
             <div class="icon">
               <i class="icon ion-ios-arrow-thin-up"></i>
             </div>
-            <h4>Pass-Up What Matters</h4>
+            <h4>Clear Information Flow</h4>
             <p>
               Managers pass up important answers to their manager. This means the CEO is only reading what has been deemed important.
             </p>
