move it above the fold

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#home">Coming Soon</a></li>
+            <li><a href="#home">Sign Up</a></li>
             <li><a href="#benefits">Benefits</a></li>
-            <li><a href="#contact-section">Sign Up</a></li>
           </ul>
         </div>
       </div>
@@ -50,8 +49,18 @@
                 Gain knowledge about what is and isn't working on your team by sending configurable weekly surveys
                 to your team members. Share wins, losses, and praise.
               </p>
-              <div class="top-button">
-                <a class="btn btn-top-white btn-lg" href="#contact-section"> Coming Soon - Sign Up</a>
+              <div class="col-sm-12 form-group contact-form">
+                <form id="email-form">
+                  <div class="col-xs-9">
+                    <input type="email" required name="email" placeholder="you@company.com" class="form-control contact-email">
+                  </div>
+                  <div class="col-xs-3">
+                    <button type="submit" class="btn btn-contact">Sign Up</button>
+                  </div>
+                </form>
+                <div class="col-xs-12 text-center hidden" id="after-email-form">
+                  <h4>Thanks! You are signed up. You won't be emailed immediately, and will only receive emails with updates.</h4>
+                </div>
               </div>
             </div>
           </div>
@@ -93,35 +102,6 @@
             <p>
               Managers pass up important answers to their manager. This means the CEO is only reading what has been deemed important.
             </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Contact us -->
-    <div id="contact-section" class="contact-container">
-      <div class="inner-contact">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12 contact">
-              <h3>
-                Coming Soon. Sign up for updates.
-              </h3>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-12 form-group contact-form">
-              <form id="email-form">
-                <div class="col-xs-9">
-                  <input type="email" required name="email" placeholder="you@company.com" class="form-control contact-email">
-                </div>
-                <div class="col-xs-3">
-                  <button type="submit" class="btn btn-contact">Sign Up</button>
-                </div>
-              </form>
-              <div class="col-xs-12 text-center hidden" id="after-email-form">
-                <h4>Thanks! You are signed up. You won't be emailed immediately, and will only receive emails with updates.</h4>
-              </div>
-            </div>
           </div>
         </div>
       </div>
