--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
               </p>
               <div class="col-sm-12 form-group contact-form">
                 <form id="email-form">
-                  <div class="col-xs-9">
+                  <div class="col-sm-9">
                     <input type="email" required name="email" placeholder="you@company.com" class="form-control contact-email">
                   </div>
-                  <div class="col-xs-3">
-                    <button type="submit" class="btn btn-contact">Sign Up</button>
+                  <div class="col-sm-3">
+                    <button type="submit" class="btn btn-contact">Sign Up For Information</button>
                   </div>
                 </form>
                 <div class="col-xs-12 text-center hidden" id="after-email-form">
