--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <input type="email" required name="email" placeholder="you@company.com" class="form-control contact-email">
                   </div>
                   <div class="col-sm-3">
-                    <button type="submit" class="btn btn-contact">Sign Up For Information</button>
+                    <button type="submit" class="btn btn-contact">Get Early Access</button>
                   </div>
                 </form>
                 <div class="col-xs-12 text-center hidden" id="after-email-form">
