--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           <div class="row">
             <div class="col-md-10 col-md-offset-1 top-description">
               <h2 class="text-center">
-                <strong>Serving</strong> your team starts with <strong>Insight</strong>
+                How well do you know your team?
               </h2>
               <p>
-                Gain knowledge about what is and isn't working on your team by sending configurable weekly surveys
-                to your team members. Share wins, losses, and praise.
+                Serving your team starts with Serve Insight. Gain knowledge about what is and isn't working on a frequent basis by sending \
+                configurable weekly surveys to your team members. Share wins, losses, and praise.
               </p>
               <div class="col-sm-12 form-group contact-form">
                 <form id="email-form">
