--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 How well do you know your team?
               </h2>
               <p>
-                Serving your team starts with Serve Insight. Gain knowledge about what is and isn't working on a frequent basis by sending \
+                Serving your team starts with Serve Insight. Gain knowledge about what is and isn't working on a frequent basis by sending
                 configurable weekly surveys to your team members. Share wins, losses, and praise.
               </p>
               <div class="col-sm-12 form-group contact-form">
