--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </h2>
               <p>
                 Serving your team starts with Serve Insight. Gain knowledge about what is and isn't working on a frequent basis by sending
-                configurable weekly surveys to your team members. Share wins, losses, and praise.
+                configurable weekly surveys to your team members. Share wins, struggles, and praise.
               </p>
               <div class="col-sm-12 form-group contact-form">
                 <form id="email-form">
