add action shot

--- a/index.html
+++ b/index.html
@@ -72,10 +72,6 @@
     <div id="benefits" class="features-container">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 features">
-          </div>
-        </div>
-        <div class="row">
           <div class="col-sm-4 features-box1">
             <div class="icon">
               <i class="icon ion-ios-lightbulb-outline"></i>
@@ -103,6 +99,16 @@
             <p>
               Managers pass up important answers to their manager. This means the CEO is only reading what has been deemed important.
             </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="product-image" class="hidden-xs hidden-sm portfolio-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 portfolio">
+            <h3>See it in action</h3>
+            <img src="assets/img/product1-crop.png" />
           </div>
         </div>
       </div>
