add border and links

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home">Sign Up</a></li>
             <li><a href="#benefits">Benefits</a></li>
+            <li class="hidden-xs hidden-sm"><a href="#see-it">See it</a></li>
           </ul>
         </div>
       </div>
@@ -103,7 +104,7 @@
         </div>
       </div>
     </div>
-    <div id="product-image" class="hidden-xs hidden-sm portfolio-container">
+    <div id="see-it" class="hidden-xs hidden-sm portfolio-container">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 portfolio">
