--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- CSS -->
     <link rel="icon" href="/favicon.ico?v=1" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Dosis:300,400,500,600,700">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -19,7 +18,7 @@
     <![endif]-->
   </head>
   <body data-spy="scroll" data-offset="80">
-    <div class="navbar navbar-default navbar-fixed-top menu-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top menu-top menu-shrink" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -28,7 +27,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#home">Serve Insight</a>
+          <a class="navbar-brand" href="#home">
+            <img id="logo" src="assets/img/logo.png" />
+            <span>Serve Insight</span>
+          </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
