words and images

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <input type="email" required name="email" placeholder="you@company.com" class="form-control contact-email">
                   </div>
                   <div class="col-sm-3">
-                    <button type="submit" class="btn btn-contact">Get Early Access</button>
+                    <button type="submit" class="btn btn-contact">Early Access Available</button>
                   </div>
                 </form>
                 <div class="col-xs-12 text-center hidden" id="after-email-form">
@@ -92,6 +92,7 @@
             </div>
             <h4>Higher Satisfaction</h4>
             <p>
+              Shoutouts allow a team to give credit and recognition.
               Recognizing good things as they happen increases satisfaction and fulfillment on a team.
             </p>
           </div>
@@ -101,7 +102,7 @@
             </div>
             <h4>Clear Information Flow</h4>
             <p>
-              Managers pass up important answers to their manager. This means the CEO is only reading what has been deemed important.
+              Managers pass up important answers to their manager. This means the CEO reads answers that have gone through a natural filter.
             </p>
           </div>
         </div>
