--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="I-QsDVRK2zJKqqsxoiIihDhHRX9iOAwKb_c3dalAP68" />
-    <title>Serve Insight - Coming Soon</title>
+    <title>Serve Insight - Early Access Available</title>
     <!-- CSS -->
     <link rel="icon" href="/favicon.ico?v=1" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
