--- a/index.html
+++ b/index.html
@@ -108,6 +108,41 @@
         </div>
       </div>
     </div>
+    <!-- Methodology -->
+    <div id="methodology" class="features-container">
+      <div class="container methodology-container">
+        <h3>Serve Insight on a team</h3>
+        <div class="row">
+          <div class="col-sm-6">
+            <img src="assets/img/shoutout.png" class="img-responsive img-shadow" />
+          </div>
+          <div class="col-sm-6">
+            <div class="methodology-box">
+              <h4 class="header">Employees take quick surveys</h4>
+              <p class="content">
+                Employees answer short surveys, weekly or bi-weekly, that your company sets up. These surveys are aimed
+                at uncovering feeling normally glossed over in the week.
+              </p>
+            </div>
+            <div class="methodology-box">
+              <h4 class="header">Managers review employee Insights</h4>
+              <p class="content">
+                Managers review their direct reports Insights and provide feedback. This feedback
+                is crucial for the development of the employee-manager relationship.
+              </p>
+            </div>
+            <div class="methodology-box">
+              <h4 class="header">Managers passup valuable answers</h4>
+              <p class="content">
+                Managers passup answers, goals, or other Insights to their manager. This allows
+                for a natural filter through an organization.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- See It -->
     <div id="see-it" class="hidden-xs hidden-sm portfolio-container">
       <div class="container">
         <div class="row">
