link to content

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="#home">Sign Up</a></li>
             <li><a href="#benefits">Benefits</a></li>
             <li class="hidden-xs hidden-sm"><a href="#see-it">See it</a></li>
+            <li><a target="_blank" href="https://content.serveinsight.com">Blog</a></li>
           </ul>
         </div>
       </div>
