--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="I-QsDVRK2zJKqqsxoiIihDhHRX9iOAwKb_c3dalAP68" />
-    <title>Serve Insight - Early Access Available</title>
+    <title>Employee Happiness Software - Serve Insight</title>
     <!-- CSS -->
     <link rel="icon" href="/favicon.ico?v=1" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
@@ -38,6 +38,7 @@
             <li><a href="#benefits">Benefits</a></li>
             <li class="hidden-xs hidden-sm"><a href="#see-it">See it</a></li>
             <li><a target="_blank" href="https://content.serveinsight.com">Blog</a></li>
+            <li><a target="_blank" href="https://serve.serveinsight.com">Start, Free!</a></li>
           </ul>
         </div>
       </div>
@@ -56,6 +57,9 @@
                 configurable weekly surveys to your team members. Share wins, struggles, and praise.
               </p>
               <div class="col-sm-12 form-group contact-form">
+                <a href="https://serve.serveinsight.com" target="_blank" class="btn btn-signup btn-contact">Get Started!</a>
+              </div>
+              <!--<div class="col-sm-12 form-group contact-form">
                 <form id="email-form">
                   <div class="col-sm-9">
                     <input type="email" required name="email" placeholder="you@company.com" class="form-control contact-email">
@@ -67,7 +71,7 @@
                 <div class="col-xs-12 text-center hidden" id="after-email-form">
                   <h4>Thanks! You are signed up. You won't be emailed immediately, and will only receive emails with updates.</h4>
                 </div>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
